# findi

./: .gitignore  Cargo.toml  Cross.toml  README.md  notes.md
.github/workflows/: ci.yml
doc/: bonjour-list.csv  issues.md  notes.md  roadmap.md
docker/: Dockerfile.arm-unknown-linux-gnueabihf  Dockerfile.x86_64-unknown-linux-gnu
scratch/: gethostbyaddr  gethostbyaddr.c  multicast_dns.py  multicast_recv.py  netbios_dns.py
scratch/service_docs/: mdns_diffs.pcapng  mdns_diffs1.pcapng
scripts/: build-targets.sh
src/: error.rs  ip_parse.rs  main.rs  ping_result.rs  tcp_ping.rs  udp_pinger.rs  ui.rs
src/config/: mod.rs
src/network/: dns.rs  host.rs  mod.rs  ping_result.rs  port_list.rs  tcp_ping.rs  udp_ping.rs
src/network/dns/: decodable.rs  decoders.rs  encoders.rs  mdns.rs  mod.rs  netbios.rs  packet.rs  query.rs  transactors.rs
src/service/: service.rs  service_list.rs
src/services/: mod.rs  service.rs  service_list.rs
src/state/: actions.rs  application_state.rs  host_modal_state.rs  mod.rs  modal_state.rs  reducers.rs  store.rs
src/ui/: components.rs  event.rs  mod.rs  modal.rs  notification.rs  popup.rs
src/ui/components/: mod.rs  search_filter.rs  selectable_title.rs  stateful_table.rs  styles.rs  text_input.rs
src/ui/pages/: main_page.rs  mod.rs  service_page.rs
