[package]
name = "findi"
version = "0.1.0"
authors = ["Nick Donald <nick@farmshelf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "1.0.2", features = ["full"] }
ipnet = "2.3.0"
# structopt = "0.3"
dns-lookup = "1.0"
colored = "2"
tui = "0.14"
termion = "1.5"
pnet = "0.27"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
serde_repr = "0.1"
