[package]
name = "findi"
version = "0.1.0"
authors = ["Nick Donald <nickjdonald@gmail.com>"]
edition = "2018"
default-run = "findi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "1.0.2", features = ["full"] }
ipnet = "2.3.0"
# Use ipnetwork instead? (its a dep of pnet) https://docs.rs/ipnetwork/0.17.0/ipnetwork/enum.IpNetwork.html
# structopt = "0.3"
dns-lookup = "1.0"
colored = "2"
tui = "0.14"
termion = "1.5"
pnet = "0.27"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
serde_repr = "0.1"
threadpool = "1.8"
anyhow = "1.0"

[features]
ui = []
default = ["ui"]

[[bin]]
test = true
bench = false
path = "src/main.rs"
name = "findi-test"

[[bin]]
test = false
bench = false
path = "src/main.rs"
name = "findi"

